info/archive/2025.1.1/debian-clang-devel-abn.md
# Configuration

>
>  R Under development (unstable) (2023-12-26 r85738)
>
>  Platform: x86_64-pc-linux-gnu
>
>  Running under: Debian GNU/Linux trixie/sid
>
>  
>
>  Matrix products: default
>
>  BLAS:   /opt/R-devel/lib/R/lib/libRblas.so 
>
>  LAPACK: /usr/lib/x86_64-linux-gnu/lapack/liblapack.so.3.11.0
>
>  
>
>  locale:
>
>   [1] LC_CTYPE=en_US.iso885915       LC_NUMERIC=C                  
>
>   [3] LC_TIME=en_US.iso885915        LC_COLLATE=en_US.iso885915    
>
>   [5] LC_MONETARY=en_US.iso885915    LC_MESSAGES=en_US.iso885915   
>
>   [7] LC_PAPER=en_US.iso885915       LC_NAME=C                     
>
>   [9] LC_ADDRESS=C                   LC_TELEPHONE=C                
>
>  [11] LC_MEASUREMENT=en_US.iso885915 LC_IDENTIFICATION=C           
>
>  
>
>  time zone: Etc/UTC
>
>  tzcode source: system (glibc)
>
>  
>
>  attached base packages:
>
>  [1] stats     graphics  grDevices utils     datasets  methods   base     
>
>  
>
>  loaded via a namespace (and not attached):
>
>  [1] compiler_4.4.0 tools_4.4.0    knitr_1.49     xfun_0.49      evaluate_1.0.1


# Installed packages



|             |Version     |
|:------------|:-----------|
|knitr        |1.49        |
|askpass      |1.2.1       |
|base64enc    |0.1-3       |
|BiocGenerics |0.52.0      |
|BiocManager  |1.30.25     |
|BiocVersion  |3.20.0      |
|bit          |4.5.0.1     |
|bit64        |4.5.2       |
|bitops       |1.0-9       |
|brew         |1.0-10      |
|brglm        |0.7.2       |
|brio         |1.1.5       |
|bslib        |0.8.0       |
|cachem       |1.1.0       |
|callr        |3.7.6       |
|cli          |3.6.3       |
|clipr        |0.8.0       |
|coda         |0.19-4.1    |
|colorspace   |2.1-1       |
|commonmark   |1.9.2       |
|covr         |3.6.4       |
|cpp11        |0.5.1       |
|crayon       |1.5.3       |
|credentials  |2.0.2       |
|crosstalk    |1.2.1       |
|curl         |6.0.1       |
|data.table   |1.16.4      |
|DBI          |1.2.3       |
|DEoptimR     |1.1-3-1     |
|Deriv        |4.1.6       |
|desc         |1.4.3       |
|devtools     |2.4.5       |
|dfidx        |0.1-0       |
|diffobj      |0.3.5       |
|digest       |0.6.37      |
|doParallel   |1.0.17      |
|downlit      |0.4.4       |
|dplyr        |1.1.4       |
|DT           |0.33        |
|e1071        |1.7-16      |
|ellipsis     |0.3.2       |
|entropy      |1.3.1       |
|evaluate     |1.0.1       |
|evd          |2.3-7.1     |
|fansi        |1.0.6       |
|farver       |2.1.2       |
|fastmap      |1.2.0       |
|FNN          |1.1.4.1     |
|fontawesome  |0.5.3       |
|foreach      |1.5.2       |
|Formula      |1.2-5       |
|fs           |1.6.5       |
|generics     |0.1.3       |
|gert         |2.1.4       |
|ggfun        |0.1.8       |
|ggplot2      |3.5.1       |
|ggplotify    |0.1.2       |
|gh           |1.4.1       |
|gitcreds     |0.1.2       |
|glue         |1.8.0       |
|graph        |1.84.0      |
|gridExtra    |2.3         |
|gridGraphics |0.5-1       |
|gsl          |2.1-8       |
|gtable       |0.3.6       |
|highr        |0.11        |
|hms          |1.1.3       |
|htmltools    |0.5.8.1     |
|htmlwidgets  |1.6.4       |
|httpuv       |1.6.15      |
|httr         |1.4.7       |
|httr2        |1.0.7       |
|ini          |0.3.1       |
|INLA         |24.06.27    |
|inline       |0.3.20      |
|isoband      |0.2.7       |
|iterators    |1.0.14      |
|jpeg         |0.1-10      |
|jquerylib    |0.1.4       |
|jsonlite     |1.8.9       |
|kableExtra   |1.4.0       |
|knitr.1      |1.49        |
|labeling     |0.4.3       |
|later        |1.4.1       |
|lazyeval     |0.2.2       |
|lifecycle    |1.0.4       |
|locfit       |1.5-9.10    |
|magrittr     |2.0.3       |
|maps         |3.4.2.1     |
|markdown     |1.13        |
|MatrixModels |0.5-3       |
|matrixStats  |1.4.1       |
|mclogit      |0.9.6       |
|memisc       |0.99.31.8.1 |
|memoise      |2.0.1       |
|mime         |0.12        |
|miniUI       |0.1.1.1     |
|moments      |0.14.1      |
|multicool    |1.0.1       |
|munsell      |0.5.1       |
|numDeriv     |2016.8-1.1  |
|openssl      |2.3.0       |
|pillar       |1.10.0      |
|pixmap       |0.4-13      |
|pkgbuild     |1.4.5       |
|pkgconfig    |2.0.3       |
|pkgdown      |2.1.1       |
|pkgload      |1.4.0       |
|plyr         |1.8.9       |
|pracma       |2.4.4       |
|praise       |1.0.0       |
|prettyunits  |1.2.0       |
|processx     |3.8.4       |
|profileModel |0.6.1       |
|profvis      |0.4.0       |
|progress     |1.2.3       |
|promises     |1.3.2       |
|proxy        |0.4-27      |
|ps           |1.8.1       |
|purrr        |1.0.2       |
|R.cache      |0.16.0      |
|R.methodsS3  |1.8.2       |
|R.oo         |1.27.0      |
|R.rsp        |0.46.0      |
|R.utils      |2.12.3      |
|R6           |2.5.1       |
|ragg         |1.3.3       |
|rappdirs     |0.3.3       |
|raster       |3.6-30      |
|rbibutils    |2.3         |
|rcmdcheck    |1.4.0       |
|RColorBrewer |1.1-3       |
|Rcpp         |1.0.13-1    |
|RCurl        |1.98-1.16   |
|Rdpack       |2.6.2       |
|readr        |2.1.5       |
|remotes      |2.5.0       |
|renv         |1.0.11      |
|reshape2     |1.4.4       |
|rex          |1.2.1       |
|rgl          |1.3.14      |
|Rgraphviz    |2.50.0      |
|RhpcBLASctl  |0.23-42     |
|rjags        |4-16        |
|rlang        |1.1.4       |
|rmarkdown    |2.29        |
|roxygen2     |7.3.2       |
|rprojroot    |2.0.4       |
|rstudioapi   |0.17.1      |
|rversions    |2.1.2       |
|rvest        |1.0.4       |
|s2           |1.1.7       |
|sass         |0.4.9       |
|scales       |1.3.0       |
|selectr      |0.4-2       |
|sessioninfo  |1.2.2       |
|shiny        |1.10.0      |
|showtext     |0.9-7       |
|showtextdb   |3.0         |
|sourcetools  |0.1.7-1     |
|sp           |2.1-4       |
|spData       |2.3.3       |
|stringi      |1.8.4       |
|stringr      |1.5.1       |
|svglite      |2.1.3       |
|sys          |3.4.3       |
|sysfonts     |0.8.9       |
|systemfonts  |1.1.0       |
|terra        |1.8-5       |
|testthat     |3.2.2       |
|textshaping  |0.4.1       |
|tibble       |3.2.1       |
|tidyr        |1.3.1       |
|tidyselect   |1.2.1       |
|tinytex      |0.54        |
|tis          |1.39        |
|tzdb         |0.4.0       |
|units        |0.8-5       |
|urlchecker   |1.0.1       |
|usethis      |3.1.0       |
|utf8         |1.2.4       |
|vctrs        |0.6.5       |
|viridisLite  |0.4.2       |
|vroom        |1.6.5       |
|waldo        |0.6.1       |
|whisker      |0.4.1       |
|withr        |3.0.2       |
|wk           |0.9.4       |
|xfun         |0.49        |
|xml2         |1.3.6       |
|xopen        |1.0.1       |
|xtable       |1.8-4       |
|yaml         |2.3.10      |
|yulab.utils  |0.1.8       |
|zip          |2.3.1       |
|zoo          |1.8-12      |


